Implemented impersonation as an admin.
